fix location align

--- a/style.css
+++ b/style.css
@@ -77,17 +77,12 @@
     left: 0;
     bottom: 0;
     width: 15%;
-    opacity: 1;
-    filter: alpha(opacity=50);
-    font-size: 20px;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.6);
     border-radius: 9px;
 }
 .carousel-caption {
     top: 0;
-    align-items: flex-start;
+    text-align: start;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.6);
     opacity: 0.90;
 }
 .card_main {
